2000-04-24 21:11:48  Shenghuo ZHU  <zsh@cs.rochester.edu>

	* gnus-util.el (gnus-netrc-machine): Another default to nntp.

2000-04-24 18:14:12  Shenghuo ZHU  <zsh@cs.rochester.edu>

	* gnus-draft.el (gnus-draft-setup): Restore mml only when
	required.
	(gnus-draft-edit-message): Require restoration.

2000-04-24 16:51:04  Shenghuo ZHU  <zsh@cs.rochester.edu>

	* gnus-score.el (gnus-score-headers): Copy gnus-newsgrou-scored
	back.

2000-04-24 16:01:15  Shenghuo ZHU  <zsh@cs.rochester.edu>

	* gnus-art.el (gnus-treat-article): Make sure that the summary
	buffer is live.

2000-04-24 15:42:53  Shenghuo ZHU  <zsh@cs.rochester.edu>

	* mailcap.el (mailcap-parse-mailcaps): Reorder.
	(mailcap-parse-mailcap): Backwards parsing.
	(mailcap-possible-viewers): Remove nreverse.
	(mailcap-mime-info): Ditto.
	(mailcap-add-mailcap-entry): Keep alternative viewer.

Mon Apr 24 21:12:06 2000  Lars Magne Ingebrigtsen  <lmi@quimbies.gnus.org>

	* gnus.el: Gnus v5.8.5 is released.

2000-04-24 16:29:07  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* rfc2047.el (rfc2047-header-encoding-alist): Doc fix.

	* gnus-util.el (gnus-netrc-machine): Default to nntp.

	* mml.el (mml-generate-mime-1): Force 8bit on message/rfc822.

2000-04-23 23:27:25  Shenghuo ZHU  <zsh@cs.rochester.edu>

	* mm-view.el (mm-inline-message): Disable prepare-hook. 

2000-04-23 00:32:32  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* gnus.el: Fix copyright statements.

	* gnus-sum.el (gnus-alter-articles-to-read-function): New
	variable. 
	(gnus-articles-to-read): Use it.

	* message.el (message-get-reply-headers): Bind free variable.

2000-04-23 01:14:28  Shenghuo ZHU  <zsh@cs.rochester.edu>

	* message.el (message-get-reply-headers): Fix to-address.

2000-04-22 22:51:46  Shenghuo ZHU  <zsh@cs.rochester.edu>

	* webmail.el: Hotmail fix. Add a debug function.

2000-04-23 00:32:32  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* gnus-sum.el (t): M-down and M-up.
