@@ -158,11 +158,9 @@ Should be called narrowed to the head of the message."
       (while (not (eobp))
 	(cond
 	 ((not state)
-	  (if (memq (char-after) blank-list)
-	      (setq state 'blank)
-	    (setq state 'word)
-	    (if (not (eq (setq cs (mm-charset-after)) 'ascii))
-		(setq current cs)))
+	  (setq state 'word)
+	  (if (not (eq (setq cs (mm-charset-after)) 'ascii))
+	      (setq current cs))
 	  (setq b (point)))
 	 ((eq state 'blank)
 	  (cond 
@@ -171,6 +169,8 @@ Should be called narrowed to the head of the message."
 	   ((memq (char-after) blank-list))
 	   (t
 	    (setq state 'word)
+	    (unless b
+		(setq b (point)))
 	    (if (not (eq (setq cs (mm-charset-after)) 'ascii))
 		(setq current cs)))))
 	 ((eq state 'word)
@@ -181,9 +181,11 @@ Should be called narrowed to the head of the message."
 	    (setq current nil))
 	   ((memq (char-after) blank-list)
 	    (setq state 'blank)
-	    (push (list b (point) current) words)
-	    (setq current nil)
-	    (setq b (point)))
+	    (if (not current)
+		(setq b nil)
+	      (push (list b (point) current) words)
+	      (setq b (point))
+	      (setq current nil)))
 	   ((or (eq (setq cs (mm-charset-after)) 'ascii)
 		(if current
 		    (eq current cs)
@@ -207,7 +209,10 @@ Should be called narrowed to the head of the message."
       (if (equal (nth 2 word) current)
 	  (setq beg (nth 0 word))
 	(when current
-	  (rfc2047-encode beg end current))
+	  (when (prog1 (and (eq beg (nth 1 word)) (nth 2 word))
+		  (rfc2047-encode beg end current))
+	    (goto-char beg)
+	    (insert " ")))
 	(setq current (nth 2 word)
 	      beg (nth 0 word)
 	      end (nth 1 word))))
